infra/k8s/project-service-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-consumer-deployment
spec:
  selector:
    matchLabels:
      app: project-app-consumer
  template:
    metadata:
      labels:
        app: project-app-consumer
    spec:
      containers:
      - name: project-app-consumer
        image: project-service-consumer-img
        ports:
          - containerPort: 5672
