infra/k8s/authservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-dply
  # annotations:
  #   linkerd.io/inject: enabled
spec:
  selector:
    matchLabels:
      app: auth-app
  template:
    metadata:
      labels:
        app: auth-app
    spec:
      containers:
      - name: auth-app
        image: auth-service-img
        ports:
          - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-app
  type: ClusterIP
  ports:
  - port: 8000
    name: auth-http
