infra/k8s/projectservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-deployment
spec:
  selector:
    matchLabels:
      app: project-app
  template:
    metadata:
      labels:
        app: project-app
    spec:
      containers:
      - name: project-app
        image: project-service-img
        ports:
          - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: project-service
spec:
  selector:
    app: project-app
  type: ClusterIP
  ports:
  - port: 8000
    name: project-http
