infra/k8s/react.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-web
  # namespace: reactspace
spec:
  type: ClusterIP
  ports:
  - port: 3000
    name: http
  selector:
    app: react-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-web
  # annotations:
  #   linkerd.io/inject: enabled
  # namespace: reactspace
spec:
  selector:
    matchLabels:
      app: react-web
  template:
    metadata:
      labels:
        app: react-web
    spec:
      containers:
      - name: react-web
        image: react-frontend
        ports:
          - containerPort: 3000
